--- a/templates/penaltylogger/log_new.html
+++ b/templates/penaltylogger/log_new.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>新規ペナルティ記録</h2>
-    <form method="GET" class="get-form">
+    <form method="POST" class="get-form">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">記録する</button>
