--- a/templates/penaltylogger/log_new.html
+++ b/templates/penaltylogger/log_new.html
@@ -1,8 +1,7 @@
 {% extends 'penaltylogger/base.html' %}
-
 {% block content %}
     <h2>新規ペナルティ記録</h2>
-    <form method="POST" class="get-form">
+    <form action="" method="POST" class="get-form">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">記録する</button>
