入力後、確認画面で戻るボタン作成 Please enter the commit message for your changes. Lines starting

--- a/templates/penaltylogger/log_save.html
+++ b/templates/penaltylogger/log_save.html
@@ -1,2 +1,7 @@
+{% extends 'penaltylogger/base.html' %}
+{% block content %}
 保存しました。
-#仮置き
+<form action="/log/new/" method="GET">
+    <button type="submit" class="btn btn-primary btn-lg">戻る</button>
+</form>
+{% endblock %}
