--- a/templates/penaltylogger/log_confirm.html
+++ b/templates/penaltylogger/log_confirm.html
@@ -1,5 +1,7 @@
+{% extends 'penaltylogger/base.html' %}
+{% block content %}
 下記の内容で保存してよろしいですか？
-
+<!-- 
 {% for field in form %}
     {{ field.name }}:{{ field.value }}<br>
 {% endfor %}
@@ -10,4 +12,24 @@
        {{ field.as_hidden }}
     {% endfor %}
     <input type="submit" value="記録する">
-</form>
+</form> -->
+
+    {% for field in form %}
+    <div class="form-group">
+        <label for="{{ field.id_for_label }}">{{ field.label_tag }}</label>
+        {{ field.value }}
+    </div>
+    {% endfor %}
+
+    <form action="/log/save/" method="POST">
+        <button type="submit" class="btn btn-primary btn-lg">記録する</button>
+        {% for field in form %}{{ field.as_hidden }}{% endfor %}
+        {% csrf_token %}
+    </form>
+    <hr>
+    <form action="" method="GET">
+        <button type="submit" class="btn btn-primary btn-lg">戻る</button>
+        {% for field in form %}{{ field.as_hidden }}{% endfor %}
+        {% csrf_token %}
+    </form>
+{% endblock %}
