--- a/templates/penaltylogger/base.html
+++ b/templates/penaltylogger/base.html
@@ -8,8 +8,13 @@
         <link rel="stylesheet" href="{% static 'css/penaltylogger.css' %}">
     </head>
     <body>
-        <div class="page-header">
-            <a href="{% url 'log_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <div class="page-header">
+                {% if user.is_authenticated %}
+                <a href="{% url 'log_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+            {% endif %}
             <h1><a href="/">ペナルティロガー</a></h1>
         </div>
         <div class="content container">
@@ -22,3 +27,5 @@
         </div>
     </body>
 </html>
+
+
