--- a/templates/penaltylogger/base.html
+++ b/templates/penaltylogger/base.html
@@ -11,7 +11,7 @@
             <div class="page-header">
                 {% if user.is_authenticated %}
                 <a href="{% url 'log_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+                <p class="top-menu">あなたのID:{{ user.username }} <small>(<a href="{% url 'logout' %}">ログアウトする</a>)</small></p>
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
