--- a/templates/penaltylogger/log_list.html
+++ b/templates/penaltylogger/log_list.html
@@ -8,9 +8,10 @@
         <!-- modelはlogのため、modelのリストはlog_list(model名_list) -->
  
         <h2><li><a href="{{ log.id }}">{{ log.name }}</a></li></h2>
-        <!-- aタブにschoolのidをhrefで指定することで、DetailViewに遷移できます -->
+        <!-- aタブにlogのidをhrefで指定することで、DetailViewに遷移できます -->
         {% endfor %}
     </ol>
  
 {% endblock %}
 
+ 
