確認用 player_noをviewで取得しようとしていたが、そもそもformに入力されているものを記録すればよいのかの判断が出来ない。また、どちらにしろ現在は取得ができていない。

--- a/templates/penaltylogger/log_list.html
+++ b/templates/penaltylogger/log_list.html
@@ -26,7 +26,7 @@
             <td>{{ log_list.event }}</td>
             <td>{{ log_list.round }}</td>
             <td>{{ log_list.judge }}</td>
-            <td>{{ log_list.player_no }}</td>
+            <td>{{ log_list.player }}</td>
             <td>{{ log_list.violation }}</td>
             <td>{{ log_list.penalty }}</td>
             <td>{{ log_list.level }}</td>
