--- a/templates/penaltylogger/log_list.html
+++ b/templates/penaltylogger/log_list.html
@@ -15,7 +15,7 @@
             <th>大会名</th>
             <th>ラウンド</th>
             <th>担当ジャッジ</th>
-            <th>プレイヤー名</th>
+            <th>プレイヤーNo</th>
             <th>違反の内容</th>
             <th>ペナルティ</th>
             <th>違反の程度</th>
